# customer-service-agent

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  test_e2e.sh
.claude/: settings.json
.claude/agents/: janitor.md
.github/workflows/: lint.yml  test.yml
configs/: acme_retail.yaml  beauty_lab.yaml
data/acme/: orders.csv  products.csv
data/beauty_lab/: appointments.csv  customers.csv  reviews.csv  services.csv  staff.csv
docs/: admin-ui.md  backend.md  beauty-lab.md  business-config.md  cli.md  llm-logging.md
plans/finished/: async-backend.md  backend-service.md  chat-history-persistence.md  cli-customer-mode.md  cli-improvements.md  cli.md  cs-worker-ui-v2.md  e2e-test-script.md  enhanced-tools.md  structured-prompt.md
plans/in-progress/: backend-service.md  cli-customer-mode.md  cs-worker-ui.md
plans/to-do/: admin-ui.md  async-backend.md  cli-customer-mode.md  cli-draft-mode.md  cli-improvements.md  cs-worker-ui.md  e2e-test-script.md  structured-prompt.md
scripts/: generate_beauty_lab_data.py
src/: cli.py
src/agent/: __init__.py  api.py  config.py  csv_tool.py  log_reader.py  logging.py  loop.py  prompt.py  session.py
src/frontend/web/: package-lock.json  package.json  playwright.config.ts
src/frontend/web/e2e/: admin-logs.spec.ts  cs-chat.spec.ts
tests/: test_admin_api.py  test_api.py  test_cli_customer_mode.py  test_config.py  test_conversations_api.py  test_csv_tool.py  test_e2e.py  test_log_reader.py  test_loop_parser.py  test_prompt.py  test_session.py
(+9 files in other folders)
